packages/typ/tests/fixtures/diagnostics/0087_core_not_int_08.ml.infer.expected
File "0087_core_not_int_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0087_core_not_int_08 is not a valid module name.

File "0087_core_not_int_08.ml", line 2, characters 37-38:
2 | let _ = match false with true -> not 0 | false -> false
                                         ^
Error: The constant 0 has type int but an expression was expected of type
         bool
