packages/typ/tests/fixtures/diagnostics/0087_core_not_int_08.ml
let not (x : bool) : bool = x
let _ = match false with true -> not 0 | false -> false
